Adding close button for the overlay
That's it.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="posview.js" defer></script>
     <style>
+    * {margin: 0;}
     html{color-scheme: dark;}
     img{display: block; max-width: 100%;}
     ul{
-      padding: 3rem;
+      padding: 2rem 3rem;
       list-style: none;
 
       display: grid;
